# spaceship-titanic-kaggle

./: .gitignore  README.md  model.py  model_best_long.py  pyproject.toml
